V1_0 Реализованы функции